<resources>
    <string name="app_name">SpatialGuide</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="username">Username</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="email_again">Re-enter Email</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">Re-enter New Password</string>
    <string name="new_email">New Email</string>
    <string name="new_email_again">Re-enter New Email</string>
    <string name="current_password">Current Password</string>
    <string name="password">Password</string>
    <string name="password_again">Re-enter Password</string>
    <string name="login">Sign in</string>
    <string name="username_or_email">Username / Email</string>
    <string name="create_account">Create Account</string>
    <string name="authenticating">Authenticating...</string>
    <string name="creating_account">Creating Account...</string>
    <string name="already_member"><u>Already member? Sign in now!</u></string>
    <string name="login_toast">Account created successfully! Sign in!</string>
    <string name="no_account"><u>No account yet? Create one now!</u></string>
    <string name="error_username_email">Please enter your username or email</string>
    <string name="error_name">Enter at least 3 characters</string>
    <string name="error_email">Enter a valid email address</string>
    <string name="error_email_match">Emails do not match</string>
    <string name="error_password">Between 4 to 10 alphanumeric characters</string>
    <string name="error_password_match">Passwords do not match</string>
    <string name="error_login">Login failed. Credentials wrong, maybe?</string>
    <string name="error_signup">Signup failed, please try again</string>
    <string name="error_recovering_password">Password recovery failed, please try again</string>
    <string name="title_activity_map">Map</string>
    <string name="welcome_text">Welcome to SpatialGuide!</string>
    <string name="register_text">Register your account on SpatialGuide!</string>
    <string name="select_route">Select one of the available routes:</string>
    <string name="routes_failed">No available routes, sorry.</string>
    <string name="route_available">Route available in this device!</string>
    <string name="route_details">Details:</string>
    <string name="map_not_available">Sorry, the map is not available.</string>
    <string name="map_route_details">Map:</string>
    <string name="go">GO</string>
    <string name="date_added">Date added</string>
    <string name="downloads">Downloads</string>
    <string name="route_points">Points in this route:</string>
    <string name="no_points_route_details">Sorry, this route has no points yet.</string>
    <string name="map">Map</string>
    <string name="downloading_route">Downloading route...</string>
    <string name="download_route">Download Route</string>
    <string name="download_route_prompt">Are you sure you want to download this Route?</string>
    <string name="navigate_route">Navigate in this Route</string>
    <string name="navigate_route_prompt">Are you sure you want to navigate in this Route?</string>
    <string name="exit">Exit</string>
    <string name="exit_prompt">Are you sure you want to quit?</string>
    <string name="location_permission_title">Location Permission Needed</string>
    <string name="location_permission_prompt">This app needs the Location permission, please accept to use location functionality</string>
    <string name="route_stored">Stored on this device</string>


    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="creating_account_dialog">Creating Account...</string>
    <string name="exit_dialog_title">Exit</string>
    <string name="exit_dialog_prompt">Are you sure you want to quit?</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password"><u>I forgot my password</u></string>
    <string name="recover_password">Recover password</string>
    <string name="recovering_password">Setting a new password...</string>
    <string name="goto_login"><u>Sign in now!</u></string>
    <string name="history_failed">Looks like you didn\'t gone travelling... \nLet\'s go!</string>
    <string name="on_device">ON DEVICE</string>
    <string name="not_auth_dialog_title">Not authenticated</string>
    <string name="not_auth_dialog_message">You must be authenticated to use this app.</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="map_not_ready">Map not ready</string>
    <string name="suggestion_prompt_dialog">Want to suggest this location?</string>
    <string name="suggestion_hint_dialog">Tell us why we should add it!</string>
    <string name="download_toast_no_points">This route has no points. Come again later.</string>
    <string name="download_toast_completed">All downloads completed!</string>
    <string name="download_toast_error">Error on download!</string>
    <string name="error_password_change_equal">New password could not be equal to current password</string>
    <string name="error_email_change_equal">New password could not be equal to current password</string>
    <string name="welcome_to_spatialguide">Welcome to SpatialGuide!</string>
    <string name="route_unfavourite_success">This route is no longer in your favorites</string>
    <string name="route_unfavourite_error">An error occurred while unfavoriting your route</string>
    <string name="route_favorited_success">Route marked as favorite!</string>
    <string name="route_favourite_error">An error occurred marking your route favourite</string>
    <string name="point_unfavourite_success">This point is no longer in your favorites</string>
    <string name="point_unfavourite_error">An error occurred while unfavoriting your point</string>
    <string name="point_favorited_success">Point marked as favorite!</string>
    <string name="point_favourite_error">An error occurred marking your point favourite</string>
    <string name="favorites_failed">You don\'t have any favorite Routes or Points... yet!</string>
    <string name="mark_as_favorite">Favorite:</string>
    <string name="loading">Loading...</string>
    <string name="select_a_route">Select a Route</string>
    <string name="update_dialog_title">Route Update</string>
    <string name="update_dialog_message">There is an update for this route!\nDo you want to update?</string>
    <string name="route_description">Description:</string>
    <string name="pick_image_intent_text">Select a image:</string>
    <string name="change_user_image">Change image</string>
    <string name="no_connection">No Internet connection</string>
    <string name="no_connection_message">This app requires a Internet connection.\nPlease turn it on.</string>
    <string name="no_headset_connected">No Headset Connected</string>
    <string name="no_headset_connected_message">To have a better travelling experience, it\'s recommended to have a headset connected.\nPlease connect a headset.</string>
    <string name="comments">Comments</string>
    <string name="this_point_has_no_comments_be_the_first">This point has no comments. Be the first!</string>
    <string name="failed_to_fetch_comments_try_again_later">Failed to fetch comments. Try again later.</string>
    <string name="insert_a_comment">Insert a comment...</string>
    <string name="mark_favorite">Mark as favorite:</string>
    <string name="learn_more">Learn More</string>
    <string name="ok">OK</string>
    <string name="change_route_order">Change Route Order</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="shortest_path">Shortest Path</string>
    <string name="adventure_mode">Adventure Mode</string>
    <string name="play_sound_again">Play sound again</string>
    <string name="pause_sound">Pause sound</string>
    <string name="suggest_this_location">Suggest this location</string>
    <string name="send_suggestion">Send suggestion</string>
    <string name="user_panel">User Panel</string>
    <string name="routes">Routes</string>
    <string name="history">History</string>
    <string name="favorites">Favorites</string>
    <string name="contact_us">Contact us</string>
    <string name="website">Website</string>
    <string name="sign_out">Sign out</string>
    <string name="route_reorder">Route Reorder</string>
    <string name="sound_options">Sound Options</string>
    <string name="play_sound">Play sound</string>
    <string name="error_signup_failed">Signup failed</string>
    <string name="error_login_failed">Login failed</string>
    <string name="download_failed_message">The download of the route has failed. Try again please.</string>
    <string name="download_failed_title">Download failed</string>
    <string name="error_route_title">Error fetching Route</string>
    <string name="error_route_message">There was an error fetching route details. Try again please.</string>
</resources>
