<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:visible="false"
            android:title="@string/map"/>
        <item
            android:id="@+id/nav_userpanel"
            android:icon="@drawable/ic_user_panel"
            android:title="@string/user_panel" />
        <item
            android:id="@+id/nav_route"
            android:icon="@drawable/ic_marker"
            android:title="@string/routes" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites" />
    </group>

    <item android:title="@string/contact_us">
        <menu>
            <item
                android:id="@+id/nav_website"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/website" />
        </menu>
    </item>

    <item android:title="@string/exit">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>
