<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/splash_layer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center_horizontal"
            />

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_username"
                android:drawableStart="@drawable/ic_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username" />
        </android.support.design.widget.TextInputLayout>

        <!-- First Name Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_firstname"
                android:drawableStart="@drawable/ic_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/firstname" />
        </android.support.design.widget.TextInputLayout>

        <!-- First Name Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_lastname"
                android:drawableStart="@drawable/ic_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/lastname" />
        </android.support.design.widget.TextInputLayout>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_email"
                android:drawableStart="@drawable/ic_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <!--  Email Re-enter Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilReEnterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_reEnterEmail"
                android:drawableStart="@drawable/ic_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_again" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_password"
                android:drawableStart="@drawable/ic_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Re-enter Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilReEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_reEnterPassword"
                android:drawableStart="@drawable/ic_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_again"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:background="@drawable/blue_rounded_shape"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/create_account"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/already_member"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>