<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_layer">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center_horizontal"
            />

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/app_name"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/white" />


        <!-- Username or Email label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_email"
                android:drawableStart="@drawable/ic_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/username_or_email"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_password"
                android:drawableStart="@drawable/ic_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/new_password"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Re-enter Password label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilReEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_reEnterPassword"
                android:drawableStart="@drawable/ic_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/new_password_again"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Recover password Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_recover_password"
            android:background="@drawable/blue_rounded_shape"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/recover_password"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/goto_login"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>

</ScrollView>