<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:paddingBottom="45dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:background="@drawable/dialog_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_options"
            android:layout_margin="15dp"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/playSound"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_replay_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/play_sound_again"
            android:layout_gravity="center_horizontal"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/pauseSound"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableTop="@drawable/ic_pause_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/pause_sound"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/closeDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:background="@drawable/close_button"/>
</FrameLayout>