<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="18dp"
        android:paddingBottom="15dp"
        android:orientation="vertical"
        android:background="@drawable/dialog_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_route_order"
            android:layout_margin="15dp"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/routeDragRecyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"/>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            android:background="@drawable/white_grey_border_top">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/confirmOrderBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="5dp"
                android:text="@string/confirm_order"
                android:layout_gravity="center_horizontal"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/shortestPathBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/shortest_path"
                android:layout_gravity="center_horizontal"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/adventureModeBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/adventure_mode"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/closeDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:background="@drawable/close_button"/>
</FrameLayout>